Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
M5
-
None
-
None
Description
Saw this on the flaky dashboard for client-test at 16b5cfbf19a0a6f6dec24e301d416d33d1e0bb4f:
ClientTest.TestDeleteTable: log.cc:662] Check failed: kLogWriting == log_state_ (1 vs. 2)
@ 0x7ffc266b914a rtl_sigaction() at ??:0
@ 0x7ffc266b828b __tsan::cur_thread_placeholder at ??:0
@ 0x7ffc232f6ec6 kudu::log::Log::GetMaxIndexesToSegmentSizeMap() at ??:0
@ 0x7ffc23a5ac40 kudu::tablet::FlushDeltaMemStoresOp::UpdateStats() at ??:0
@ 0x7ffc23ab7b66 kudu::MaintenanceManager::FindBestOp() at ??:0
@ 0x7ffc23ab7105 kudu::MaintenanceManager::RunSchedulerThread() at ??:0
Attachments
Issue Links
- relates to
-
KUDU-173 log.cc:279 Check failed: state_ == kLogWriting (2 vs. 1)
- Resolved