src/kudu/consensus/log.h
@@ -182,7 +182,7 @@ class Log {
   Status GC(int64_t min_op_idx, int* num_gced);
 
   // Computes the amount of bytes that would have been GC'd if Log::GC had been called.
-  Status GetGCableDataSize(int64_t min_op_idx, int64_t* total_size) const;
+  void GetGCableDataSize(int64_t min_op_idx, int64_t* total_size) const;
 
   // Returns a map of log index -> segment size, of all the segments that currently cannot be GCed
   // because in-memory structures have anchors in them.
